fix multithreading sync errors
(cherry picked from commit b2bb4f5ac109928c930ca5cc954b7ce22703a3dc)